--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,20 +1,13 @@
 {
   "compilerOptions": {
     "target": "es5",
-    "lib": ["dom", "dom.iterable", "esnext"],
-    "allowJs": true,
-    "skipLibCheck": true,
     "strict": true,
-    "forceConsistentCasingInFileNames": true,
     "declaration": true,
-    "outDir": "./dist",
-    "noEmit": true,
-    "esModuleInterop": true,
-    "module": "esnext",
+    "outDir": "dist",
+    "module": "commonjs",
     "moduleResolution": "node",
-    "resolveJsonModule": true,
-    "isolatedModules": false,
     "incremental": true
+    
   },
   "include": ["src"],
   "exclude": ["node_modules"]
