--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "lichess-client",
   "version": "1.0.1",
   "description": "lichess API wrapper for node.js",
-  "main": "src/index.ts",
+  "main": "dist/index.js",
   "repository": "git@github.com:krmannix/lichess.git",
   "author": "Kevin Mannix <kevinrmannix@gmail.com>",
   "keywords": [
