add lint, etc. Changed from OOP to js functions

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
     "strict": true,
     "declaration": true,
     "outDir": "dist",
-    "module": "commonjs",
+    "module": "ES2020",
     "moduleResolution": "node",
     "incremental": true
   },
