--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "lichess-client",
   "version": "1.0.1",
   "description": "lichess API wrapper for node.js",
-  "main": "dist/index.js",
+  "exports": "./dist/index.js",
   "repository": "git@github.com:krmannix/lichess.git",
   "author": "Kevin Mannix <kevinrmannix@gmail.com>",
   "keywords": [
@@ -29,6 +29,10 @@
     "prettier": "^2.5.1",
     "ts-node": "^10.4.0",
     "typescript": "^4.5.5"
+  },
+  "type": "module",
+  "engines": {
+    "node": "^12.20.0 || >=14.13.1"
   },
   "files": [
     "dist/**/*"
