correction for typescript does not build d.ts

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.1",
   "description": "lichess API wrapper for node.js",
   "exports": "./dist/index.js",
+  "types": "./dist/index.d.ts",
   "repository": "git@github.com:krmannix/lichess.git",
   "author": "Kevin Mannix <kevinrmannix@gmail.com>",
   "keywords": [
