--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,7 @@
     "moduleResolution": "node",
     "incremental": true
   },
-  "include": ["src"],
-  "exclude": ["node_modules"]
+  "include": ["src/**/*", "src/**/*.d.ts"],
+  "exclude": ["node_modules"],
+  "files": ["src/types/types.ts"]
 }
