--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
       "./dist/types/"
     ]
   },
-  "types": "./dist/index.d.ts",
+  "types": "./dist/types/index.ts",
+  "files": [
+    "dist/**/*"
+  ],
   "repository": "git@github.com:krmannix/lichess.git",
   "author": "Kevin Mannix <kevinrmannix@gmail.com>",
   "keywords": [
@@ -43,8 +46,5 @@
   "type": "module",
   "engines": {
     "node": "^12.20.0 || >=14.13.1"
-  },
-  "files": [
-    "dist/**/*"
-  ]
+  }
 }
